--- a/app/src/main/res/layout/activity_update_product_variant.xml
+++ b/app/src/main/res/layout/activity_update_product_variant.xml
@@ -5,8 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/update_product_variant_bg"
-    tools:context=".AddProductVariantActivity">
+    android:background="@drawable/glass_bg"
+    tools:context=".UpdateProductVariantActivity">
 
     <ImageView
         android:id="@+id/imvGoBack"
@@ -15,7 +15,8 @@
         android:padding="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/baseline_arrow_back_24" />
+        app:srcCompat="@drawable/baseline_arrow_back_24"
+        app:tint="@android:color/white" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -23,111 +24,168 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <LinearLayout
+        <FrameLayout
+            android:id="@+id/glass_card_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="32dp" android:background="@drawable/glass_card"
+            android:elevation="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_gravity="center_vertical"> <LinearLayout
             android:overScrollMode="always"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="100dp"
-            android:padding="20dp">
+            android:padding="32dp"> <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:gravity="center"
+            android:text="Update Product Variant"
+            android:textColor="@android:color/white"
+            android:textSize="28sp"
+            android:textStyle="bold" />
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp" android:layout_marginBottom="4dp"
+                android:fontFamily="@font/poppins_light"
+                android:text="Product Name"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
             <EditText
                 android:id="@+id/add_pv_name"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="10dp"
-                android:background="@drawable/around_border"
-                android:gravity="start|center_vertical"
-                android:hint="Product Name"
-                android:padding="16dp"/>
-
+                android:layout_height="50dp"
+                android:layout_marginStart="0dp" android:layout_marginEnd="0dp" android:layout_marginBottom="12dp"
+                android:background="@drawable/input_glass"
+                android:gravity="center_vertical"
+                android:hint="Enter product name"
+                android:padding="15dp"
+                android:textColor="@android:color/white"
+                android:textColorHint="#B3FFFFFF"
+                android:textSize="16sp"
+                android:singleLine="true"
+                android:ellipsize="end"
+                android:scrollHorizontally="true"
+                android:fontFamily="@font/poppins_light"
+                android:enabled="false"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp" android:layout_marginBottom="4dp"
+                android:fontFamily="@font/poppins_light"
+                android:text="Import Price"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
             <EditText
                 android:id="@+id/add_pv_import_price"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="10dp"
-                android:background="@drawable/around_border"
-                android:gravity="start|center_vertical"
-                android:hint="Import Price"
-                android:padding="16dp"/>
+                android:layout_height="50dp"
+                android:layout_marginStart="0dp" android:layout_marginEnd="0dp" android:layout_marginBottom="12dp"
+                android:background="@drawable/input_glass"
+                android:gravity="center_vertical"
+                android:hint="Enter import price"
+                android:padding="15dp"
+                android:textColor="@android:color/white"
+                android:textColorHint="#B3FFFFFF"
+                android:textSize="16sp"
+                android:inputType="numberDecimal"
+                android:singleLine="true"
+                android:ellipsize="end"
+                android:scrollHorizontally="true"
+                android:fontFamily="@font/poppins_light" />
+
             <TextView
                 android:id="@+id/no_items_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="No items available"
                 android:textSize="18sp"
-                android:textColor="#000"
+                android:textColor="@color/glass_white_80"
                 android:gravity="center"
-                android:visibility="gone" />
+                android:visibility="gone"
+                android:layout_marginBottom="12dp"
+                android:fontFamily="@font/poppins_light"/>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view_2"
                 android:layout_width="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_height="100dp"
-                android:scrollbars="vertical"
-                android:scrollbarAlwaysDrawVerticalTrack="true"/>
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+                android:visibility="gone" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-
                 <Button
-                    android:id="@+id/add_pv_button_add_size_color"
+                    android:id="@+id/add_pv_button_add_size"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:backgroundTint="@color/textColorHint"
-                    android:text="Update Size and Color"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="0dp" android:layout_marginEnd="0dp" android:background="@drawable/button_glass_blue"
+                    android:text="Update Size/Color"
+                    android:textColor="@android:color/white"
                     android:textSize="18sp"
-                    app:cornerRadius="20dp"/>
+                    android:fontFamily="@font/poppins_semibold" />
             </LinearLayout>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp" android:layout_marginTop="20dp"
+                android:layout_marginBottom="4dp"
+                android:fontFamily="@font/poppins_light"
+                android:text="Stock"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
             <EditText
                 android:id="@+id/add_pv_stock"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="10dp"
-                android:background="@drawable/around_border"
-                android:gravity="start|center_vertical"
-                android:hint="Stock"
-                android:padding="16dp"/>
+                android:layout_height="50dp"
+                android:layout_marginStart="0dp" android:layout_marginEnd="0dp" android:layout_marginBottom="12dp"
+                android:background="@drawable/input_glass"
+                android:gravity="center_vertical"
+                android:hint="Enter stock quantity"
+                android:padding="15dp"
+                android:textColor="@android:color/white"
+                android:textColorHint="#B3FFFFFF"
+                android:textSize="16sp"
+                android:inputType="number"
+                android:singleLine="true"
+                android:ellipsize="end"
+                android:scrollHorizontally="true"
+                android:fontFamily="@font/poppins_light" />
 
             <Button
                 android:id="@+id/add_pv_dimension"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="10dp"
-                android:backgroundTint="@color/textColorHint"
+                android:layout_height="50dp"
+                android:layout_marginStart="0dp" android:layout_marginTop="8dp"
+                android:layout_marginEnd="0dp" android:background="@drawable/button_glass_blue"
                 android:text="Update Dimension"
+                android:textColor="@android:color/white"
                 android:textSize="18sp"
-                app:cornerRadius="20dp"/>
+                android:fontFamily="@font/poppins_semibold" />
 
             <Button
                 android:id="@+id/add_pv_button"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="10dp"
-                android:backgroundTint="@color/textColorHint"
+                android:layout_height="50dp"
+                android:layout_marginStart="0dp" android:layout_marginTop="20dp"
+                android:layout_marginEnd="0dp" android:background="@drawable/button_glass_blue"
                 android:text="Update"
+                android:textColor="@android:color/white"
                 android:textSize="18sp"
-                app:cornerRadius="20dp"/>
-
-
-        </LinearLayout>
+                android:fontFamily="@font/poppins_semibold"
+                android:layout_marginBottom="0dp" /> </LinearLayout>
+        </FrameLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
