--- a/app/src/main/res/drawable/around_border.xml
+++ b/app/src/main/res/drawable/around_border.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-    <shape
-        android:shape="rectangle">
-        <stroke
-            android:width="2dp"
-            android:color="@color/textColorHint"/>
-        <corners
-            android:radius="30dp"/>
-    </shape>
-    </item>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#FFFFFF" />
+    <corners android:radius="10dp" />
+    <stroke
+    android:width="2dp"
+        android:color="#FFA500" />
+    <padding
+    android:left="16dp"
+    android:top="16dp"
+    android:right="16dp"
+    android:bottom="16dp" />
+</shape>
