--- a/app/src/main/res/layout/activity_add_product_variant.xml
+++ b/app/src/main/res/layout/activity_add_product_variant.xml
@@ -9,125 +9,167 @@
     tools:context=".AddProductVariantActivity">
 
     <ImageView
-    android:id="@+id/imvGoBack"
-    android:layout_width="60dp"
-    android:layout_height="60dp"
-    android:padding="12dp"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:srcCompat="@drawable/baseline_arrow_back_24" />
+        android:id="@+id/imvGoBack"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:padding="12dp"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/baseline_arrow_back_24"
+        app:tint="@android:color/white" />
+
+    <TextView
+        android:id="@+id/tv_title_product_top"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Add Product Variant"
+        android:textColor="@android:color/white"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:fontFamily="@font/poppins_semibold"
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toEndOf="@+id/imvGoBack"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <LinearLayout
-            android:overScrollMode="always"
+        <FrameLayout
+            android:id="@+id/glass_card_product"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="100dp"
-            android:padding="20dp">
+            android:layout_margin="32dp"
+            android:background="@drawable/glass_card"
+            android:elevation="8dp"
+            android:padding="32dp"
+            android:layout_gravity="center_vertical">
 
-            <EditText
-                android:id="@+id/add_pv_name"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="10dp"
-                android:background="@drawable/around_border"
-                android:gravity="start|center_vertical"
-                android:hint="Product Name"
-                android:padding="16dp"/>
-
-            <EditText
-                android:id="@+id/add_pv_import_price"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="10dp"
-                android:background="@drawable/around_border"
-                android:gravity="start|center_vertical"
-                android:hint="Import Price"
-                android:padding="16dp"/>
-            <TextView
-                android:id="@+id/no_items_text_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="No items available"
-                android:textSize="18sp"
-                android:textColor="#000"
-                android:gravity="center"
-                android:visibility="gone" />
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_view_2"
-                android:layout_width="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_height="100dp"
-                android:scrollbars="vertical"
-                android:scrollbarAlwaysDrawVerticalTrack="true"/>
             <LinearLayout
+                android:overScrollMode="always"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal">
 
-                <Button
-                    android:id="@+id/add_pv_button_add_size_color"
+                <EditText
+                    android:id="@+id/add_pv_name"
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:layout_marginStart="10dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/input_glass"
+                    android:gravity="start|center_vertical"
+                    android:hint="Product Name"
+                    android:padding="15dp"
+                    android:textColor="@android:color/black"        android:textColorHint="#99000000"   android:fontFamily="@font/poppins_light"
+                    android:textSize="16sp"
+                    android:layout_marginBottom="10dp"
+                    android:enabled="false"/>
+                <EditText
+                    android:id="@+id/add_pv_import_price"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@drawable/input_glass"
+                    android:gravity="start|center_vertical"
+                    android:hint="Import Price"
+                    android:padding="15dp"
+                    android:textColor="@android:color/black"        android:textColorHint="#99000000"   android:fontFamily="@font/poppins_light"
+                    android:textSize="16sp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:backgroundTint="@color/textColorHint"
-                    android:text="Add Size and Color"
+                    android:layout_marginBottom="10dp"
+                    android:inputType="numberDecimal"
+                    android:enabled="false"/>
+                <TextView
+                    android:id="@+id/no_items_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="No variants added yet."
                     android:textSize="18sp"
-                    app:cornerRadius="20dp"/>
+                    android:textColor="@color/glass_white_80"
+                    android:fontFamily="@font/poppins_light"
+                    android:gravity="center"
+                    android:visibility="gone"
+                    android:layout_marginBottom="10dp" />
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/border_for_recyclerview"
+                    android:padding="1dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp">
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recycler_view_2"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:scrollbarAlwaysDrawVerticalTrack="true"
+                        android:scrollbars="vertical" />
+                </FrameLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/add_pv_button_add_size_color"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:background="@drawable/button_glass_blue"
+                        android:text="Add Size and Color"
+                        android:textSize="18sp"
+                        android:textColor="@android:color/white"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp" />
+                </LinearLayout>
+
+                <EditText
+                    android:id="@+id/add_pv_stock"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@drawable/input_glass"
+                    android:gravity="start|center_vertical"
+                    android:hint="Stock Quantity (Overall)"
+                    android:padding="15dp"
+                    android:textColor="@android:color/black"        android:textColorHint="#99000000"   android:fontFamily="@font/poppins_light"
+                    android:textSize="16sp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:inputType="number"
+                    android:enabled="false"/>
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/add_pv_dimension"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@drawable/button_glass_blue"
+                    android:text="Add Dimensions"
+                    android:textSize="18sp"
+                    android:textColor="@android:color/white"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/add_pv_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@drawable/button_glass_blue"
+                    android:text="Save Product"
+                    android:textSize="18sp"
+                    android:textColor="@android:color/white"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp" />
+
             </LinearLayout>
-
-            <EditText
-                android:id="@+id/add_pv_stock"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="10dp"
-                android:background="@drawable/around_border"
-                android:gravity="start|center_vertical"
-                android:hint="Stock"
-                android:padding="16dp"/>
-
-            <Button
-                android:id="@+id/add_pv_dimension"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="10dp"
-                android:backgroundTint="@color/textColorHint"
-                android:text="Add Dimension"
-                android:textSize="18sp"
-                app:cornerRadius="20dp"/>
-
-            <Button
-                android:id="@+id/add_pv_button"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="10dp"
-                android:backgroundTint="@color/textColorHint"
-                android:text="Add"
-                android:textSize="18sp"
-                app:cornerRadius="20dp"/>
-
-
-        </LinearLayout>
+        </FrameLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
