--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -321,11 +321,10 @@
     </ScrollView>
 
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="75dp"
-        android:background="@color/edtColor"
+        android:background="@color/glass_link_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -336,7 +335,7 @@
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/red_bg_btn"
+            android:background="@drawable/button_glass_blue"
             android:drawableStart="@drawable/cart"
             android:paddingStart="16sp"
             android:text="Add to cart"
